Start of TypeScript language support